# aks-primality-test

./: .gitignore  CMakeLists.txt  README.md  opracowanie.typ  plot.py  prezentacja.typ
src/: main.c  poly.c  poly.h
